# vehicle_captain_its_lib_c_cxx

./: .gitignore  HOWTO_UPDATE.md  README.md  USAGE_GUIDE.md  command-cxx.sh  docker-generation-demo-build-and-run.sh  docker-generation-environment-build-and-run.sh
release/: CMakeLists.txt
release/demo/: USAGE_GUIDE.md  main.cpp
release/experimental/vcits/: CMakeLists.txt
release/experimental/vcits/asn1c/: BIT_STRING.h  CMakeLists.txt  constr_TYPE.h  jer_decoder.h  jer_encoder.h  jer_support.h
release/experimental/vcits/cam/: AccelerationConfidence.h  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.h  AltitudeConfidence.h  AltitudeValue.h  CMakeLists.txt  CauseCodeType.h  CollisionRiskSubCauseCode.h  CurvatureConfidence.h  CurvatureValue.h  DangerousEndOfQueueSubCauseCode.h  DangerousGoodsBasic.h  DangerousSituationSubCauseCode.h  DeltaAltitude.h  DeltaLongitude.h  DriveDirection.h  EXTERNAL.h  EmbarkationStatus.h  EmergencyPriority.h  EmergencyVehicleApproachingSubCauseCode.h  EnergyStorageType.h  ExteriorLights.h  GenerationDeltaTime.h  HazardousLocation-AnimalOnTheRoadSubCauseCode.h  HazardousLocation-DangerousCurveSubCauseCode.h  HazardousLocation-SurfaceConditionSubCauseCode.h  HeadingConfidence.h  HeadingValue.h  HeightLonCarr.h  HumanPresenceOnTheRoadSubCauseCode.h  HumanProblemSubCauseCode.h  InformationQuality.h  LateralAccelerationValue.h  Latitude.h  LightBarSirenInUse.h  Longitude.h  LongitudinalAccelerationValue.h  NumberOfOccupants.h  (+41 more)
release/experimental/vcits/cpm/: AccelerationCartesian.h  AccelerationChange.h  AccelerationChangeIndication.h  AccelerationComponent.h  AccelerationConfidence.h  AccelerationControl.h  AccelerationMagnitude.h  AccelerationMagnitudeValue.h  AccelerationPolarWithZ.h  AccelerationValue.h  AccessTechnologyClass.h  AccidentSubCauseCode.h  ActionID.h  ActionId.h  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AirHumidity.h  Altitude.h  (+236 more)
release/standard/vcits/: CMakeLists.txt
(+4729 files in other folders)
